--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./ok/
+        working-directory: ./ok
     strategy:
       matrix:
         node-version: [18.x]
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache-dependency-path: ./ok/package-lock.json
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
